[package]
name = "crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
rand = "0.8"
p256 = { version = "0.9", features = ["ecdh"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11"
hex = "0.4"
md5 = "0.7"
serde_json = "1.0"
chrono = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
