[package]
name = "jcers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# derive = ["jcers_proc"]

# [[example]]
# name = "test"
# path = "examples/test.rs"

[dependencies]
bytes = "1.1"
jcers_proc = { path = "../jcers_proc" }
hex = "*"

[dev-dependencies]
hex = "*"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
